[gd_scene load_steps=9 format=3 uid="uid://k3ft1bapn776"]

[ext_resource type="Script" path="res://Objects/key_door.gd" id="1_fcf2i"]
[ext_resource type="Texture2D" uid="uid://cy2ahfkpoeilq" path="res://Assets/Key Door Sprites.png" id="2_rv05j"]
[ext_resource type="Script" path="res://Scripts/Classes/audio_library.gd" id="4_j27so"]
[ext_resource type="Script" path="res://Scripts/Classes/sound_effect.gd" id="5_10d18"]
[ext_resource type="AudioStream" uid="uid://bfqkfadixhrny" path="res://Sfx/door thump.wav" id="7_0mwbk"]

[sub_resource type="Resource" id="Resource_kequ1"]
script = ExtResource("5_10d18")
tag = "thump"
stream = ExtResource("7_0mwbk")

[sub_resource type="Resource" id="Resource_g57ey"]
script = ExtResource("4_j27so")
sound_effects = Array[ExtResource("5_10d18")]([SubResource("Resource_kequ1")])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_34inq"]
size = Vector2(8, 8)

[node name="KeyDoor" type="StaticBody2D"]
z_index = 2
script = ExtResource("1_fcf2i")
initial_state = "open"
sfxs = SubResource("Resource_g57ey")

[node name="TopSprite" type="Sprite2D" parent="."]
texture_repeat = 1
texture = ExtResource("2_rv05j")
region_enabled = true
region_rect = Rect2(16, 0, 8, 8)

[node name="ColorSprite" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(0, 8)
texture = ExtResource("2_rv05j")
region_enabled = true
region_rect = Rect2(0, 0, 8, 8)

[node name="BottomSprite" type="Sprite2D" parent="."]
position = Vector2(0, 16)
texture = ExtResource("2_rv05j")
region_enabled = true
region_rect = Rect2(24, 0, 8, 8)

[node name="DoorColl" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
scale = Vector2(1, 3)
shape = SubResource("RectangleShape2D_34inq")
